samples/_failures_safe/1761604180_2f4fb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_defd1940.c: In function ‘main’:
./samples/SAFE/__tmp_defd1940.c:142:28: error: missing terminating " character
  142 |                     printf("Matrix multiplication failed: dimension mismatch or overflow
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_defd1940.c:142:21: error: expected expression at end of input
  142 |                     printf("Matrix multiplication failed: dimension mismatch or overflow
      |                     ^~~~~~
./samples/SAFE/__tmp_defd1940.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_defd1940.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_defd1940.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_defd1940.c:142:21: error: expected declaration or statement at end of input
